@@ -132,6 +132,8 @@ public:
 	/** Creates a move action for the current side, and erases the temp move.
 	 *  The move action is inserted at the end of the queue, to be executed last. */
 	void save_temp_move();
+	/** @return an iterator to the unit that owns the temp move, resources::units->end() if there's none. */
+	unit_map::iterator get_temp_move_unit() const;
 
 	/** Creates an attack or attack-move action for the current side */
 	void save_temp_attack(const map_location& attacker_loc, const map_location& defender_loc, int weapon_choice);
@@ -225,6 +227,7 @@ private:
 
 	std::vector<arrow_ptr> move_arrows_;
 	std::vector<fake_unit_ptr> fake_units_;
+	size_t temp_move_unit_underlying_id_;
 
 	boost::scoped_ptr<CKey> key_poller_;
 
