@@ -48,6 +48,7 @@ Version 1.9.14+svn:
    * Fixed bug #19221 : Assert when a whiteboard move-attack wins a scenario
    * Fixed bug #19142 : attacks can be simulated between units (for which this
      shouldn't be possible)
+   * Fixed bug #18635: Percentage not displayed for units selected at their future position
  * Miscellaneous and bug fixes:
    * Fixed wmlindent writing CRLF end of lines on windows
    * Fix tutorial units without xp bar
